--- a/internship_system/placement/static/placement/assets/css/company.css
+++ b/internship_system/placement/static/placement/assets/css/company.css
@@ -3,14 +3,14 @@
     font-weight: bold;
     color: #2c3e50;
     margin: 0;
+    margin-left: 15px;
 }
 
 .dashboard-cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     gap: 20px;
-    margin-bottom: 30px;
-    margin-top: 100px;
+    margin: 100px 15px 30px 15px;
 }
 
 /* Card */
