--- a/internship_system/placement/templates/company/dashboard.html
+++ b/internship_system/placement/templates/company/dashboard.html
@@ -25,7 +25,7 @@
             <p>{{ total_interns }}</p>
         </a>
 
-        <a href="#" class="card">
+        <a href="{% url 'supervisor_applications' %}" class="card">
             <h3>Pending Applications</h3>
             <p>{{ pending_applications }}</p>
         </a>
