--- a/internship_system/placement/templates/company/base.html
+++ b/internship_system/placement/templates/company/base.html
@@ -40,7 +40,7 @@
 									</ul>
 								</li>
 								<li><a href="{% url 'supervisor_applications' %}" id="about-link"><span class="icon solid fa-user">Internship Application</span></a></li>
-								<li><a href="#contact" id="contact-link"><span class="icon solid fa-address-book">Logbooks</span></a></li>
+								<li><a href="{% url 'company_logbook_review' %}" id="contact-link"><span class="icon solid fa-address-book">Logbooks</span></a></li>
                                 <li class="nav-attendance">
 									<a id="attendanceToggle">
 										<span class="icon solid fa-calendar"></span>
