--- a/internship_system/placement/templates/academic_dashboard.html
+++ b/internship_system/placement/templates/academic_dashboard.html
@@ -53,7 +53,7 @@
 
 		<!-- Main -->
 		<div id="main">
-
+			{% block content %}
 			<!-- Intro / Dashboard Header -->
 			<section id="top" class="one dark cover">
 				<div class="container">
@@ -130,11 +130,12 @@
 							</article>
 						</div>
 					</div>
+					
 				</div>
 			</section>
 
-
-		<!-- Footer -->
+		
+			<!-- Footer -->
 			<div id="footer">
 
 				<!-- Copyright -->
@@ -144,7 +145,7 @@
 
 			</div>
 
-		<!-- Scripts -->
+			<!-- Scripts -->
             <script src="{% static 'placement/assets/js/jquery.min.js' %}"></script>
             <script src="{% static 'placement/assets/js/jquery.scrolly.min.js' %}"></script>
             <script src="{% static 'placement/assets/js/jquery.scrollex.min.js' %}"></script>
@@ -152,6 +153,9 @@
             <script src="{% static 'placement/assets/js/breakpoints.min.js' %}"></script>
             <script src="{% static 'placement/assets/js/util.js' %}"></script>
             <script src="{% static 'placement/assets/js/main.js' %}"></script>
+
+		{% endblock %}
+		</div>
 
 	</body>
 </html>
