--- a/internship_system/placement/templates/company/evaluation.html
+++ b/internship_system/placement/templates/company/evaluation.html
@@ -1,4 +1,4 @@
-{% extends "Company/base.html" %}
+{% extends "company/base.html" %}
 
 {% block title %}Internship Application List{% endblock %}
 
