--- a/internship_system/placement/templates/student/base.html
+++ b/internship_system/placement/templates/student/base.html
@@ -38,7 +38,7 @@
 								<li><a href="{% url 'student_offers' %}"id="contact-link"><span class="icon solid fa-check">My Application</span></a></li>
 								<li><a href="{% url 'logbook_list' %}"id="contact-link"><span class="icon solid fa-address-book">Logbook</span></a></li>
 								<li><a href="{% url 'student_attendance_summary' %}" id="contact-link"><span class="icon solid fa-calendar">Attendance</span></a></li>
-								<!--<li><a href="{% url 'notifications' %}"><span class="icon solid fa-bell">Notifications</span></li> -->
+								<li><a href="{% url 'notifications' %}"><span class="icon solid fa-bell">Notifications</span></a></li>
 							</ul>
 						</nav>
 
