--- a/internship_system/placement/templates/student/internship_apply.html
+++ b/internship_system/placement/templates/student/internship_apply.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="apply-wrapper">
+<div class="form-wrapper">
 <h2>Apply Internship</h2>
 
 <p><strong>{{ internship.title }}</strong></p>
