--- a/internship_system/placement/templates/student/submit_logbook.html
+++ b/internship_system/placement/templates/student/submit_logbook.html
@@ -1,6 +1,7 @@
 {% extends "student/base.html" %}
 {% block content %}
 
+<div class="form-wrapper">
 <h2>Submit Logbook - Week {{ week_no }}</h2>
 
 <form method="post">
@@ -9,4 +10,5 @@
     <button type="submit">Submit</button>
 </form>
 
+</div>
 {% endblock %}
