--- a/internship_system/placement/templates/student/logbook_list.html
+++ b/internship_system/placement/templates/student/logbook_list.html
@@ -1,6 +1,7 @@
 {% extends "student/base.html" %}
 {% block content %}
 
+<div class="profile-wrapper">
 <h2>Weekly Logbook</h2>
 
 {% if error %}
@@ -41,5 +42,7 @@
 
 </table>
 {% endif %}
+
+</div>
 
 {% endblock %}
