--- a/internship_system/placement/templates/student/profile.html
+++ b/internship_system/placement/templates/student/profile.html
@@ -46,6 +46,26 @@
           {% endif %}
         </td>
       </tr>
+      <tr>
+        <th>Company Supervisor</th>
+        <td>
+          {% if placement %}
+            {{ placement.company_supervisor.user.username }}
+          {% else %}
+            <em>Not Assigned Yet</em>
+          {% endif %}
+        </td>
+      </tr>
+     <tr>
+        <th>Company</th>
+        <td>
+          {% if placement %}
+            {{ placement.company_supervisor.company.company_name }}
+          {% else %}
+            <em>Not Assigned Yet</em>
+          {% endif %}
+        </td>
+      </tr>
     </table>
 
     <div class="profile-actions">
